--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
             <div class="column left">
-               <img src="css/images/D resume.pdf" alt="">
+               <img src="css/images/dipak.jpg" alt="">
             </div>
             <div class="column right">
                 <div class="text">I'm Dipak and I'm a <span class="typing-2"></span></div>
                 <p>Looking for a challenging role so that I can use my skills and capabilities through sincere dedication and hard work for successful career.</p>
-           <a href="css/images/resume.pdf">My Resume</a>
+           <a href="css/images/D resume.pdf">My Resume</a>
             </div>
             </div>
         </div>
