--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
              <div class="card">
                 <div class="box">
                   <i class="fas fa-chart-line"></i>
-                   <div class="text">web development</div>
+                   <div class="text">web Deployment</div>
                    <p>I have deploy website on AWS services and also DevOps Tools like Jenkins Docker Kubernetes </p> 
                 </div>     
               </div>
