--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="column right">
                 <div class="text">I'm Dipak and I'm a <span class="typing-2"></span></div>
                 <p>Looking for a challenging role so that I can use my skills and capabilities through sincere dedication and hard work for successful career.</p>
-           <a href="css/images/res.pdf">My Resume</a>
+           <a href="css/images/Resumew.pdf">My Resume</a>
             </div>
             </div>
         </div>
